--- a/src/styles/LandingPage.css
+++ b/src/styles/LandingPage.css
@@ -2,7 +2,7 @@ p, h3, h5 {
     font-family: Roboto;
 }
 
-body {
+.landing-page {
     background-color: #CDC8B0;
 	background-size: 4px 4px;
     background-image: linear-gradient(90deg, transparent, transparent 3px, rgba(0, 0, 0, .07) 4px), linear-gradient(transparent, transparent 3px, rgba(0, 0, 0, .07) 4px);
